tests/semantic_cases/valid/typed_var_named_alias.ob0
MODULE Main;
TYPE Count = INTEGER;
VAR x: Count;
BEGIN
  x := 1
END Main.
